fix overlay in header styling on mobile

--- a/sass/mixins/_mixins-master.scss
+++ b/sass/mixins/_mixins-master.scss
@@ -406,6 +406,7 @@ $hover-opacity: 0.5;
 		height: 100%;
 		width: 100%;
 		top: 0;
+		z-index: $z-base;
 	}
 }
 
