--- a/sass/modules/_zindex.scss
+++ b/sass/modules/_zindex.scss
@@ -12,6 +12,7 @@ $z-nav-top: 1001;
 $z-nav: 1000;
 $z-ground-top: 100;
 $z-ground: 50;
+$z-base: 0;
 $z-below: -1;
 
 
